# [#29560] jumping column in Contact Manager: Contacts. Thanks Daria Mikhailova and Roland Dalmulder (Fix #569)

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -695,6 +695,9 @@ td.has-context {
 	// Fixes difference in height between normal and hover on cell with context
 	height: 23px;
 }
+td.nowrap.has-context{
+  width:  45%;
+}
 
 /* Item associations */
 .item-associations {
